--- a/submissions/thesis-original/tables/design/descriptive_statistics.tex
+++ b/submissions/thesis-original/tables/design/descriptive_statistics.tex
@@ -1,12 +1,15 @@
 \begin{tabular}{lrrrrrrrrr} \toprule
-& \multicolumn{1}{c}{Count} & \multicolumn{2}{c}{\thead{Age \\ (Years)}} & \multicolumn{2}{c}{\thead{Funding Raised \\ (USD, millions)}} & \multicolumn{2}{c}{\thead{Funding \\ Rounds (N)}} & \multicolumn{2}{c}{\thead{Available \\ Features (N)}} \\
+& \multicolumn{1}{c}{Count}
+& \multicolumn{2}{c}{\thead{Age \\ (Years)}}
+& \multicolumn{2}{c}{\thead{Funding Raised \\ (USD, millions)}}
+& \multicolumn{2}{c}{\thead{Funding \\ Rounds (N)}}
+& \multicolumn{2}{c}{\thead{Available \\ Features (N)}} \\
 Stage        & N         & Median & IQR   & Median & IQR   & Median & IQR   & Median & IQR   \\ \midrule
-New          & 276,305   & 0.0    & 4.0   & 0.00   & 0.00  & 0.0    & 0.0   & 276    & 24    \\
-Pre-Seed     & 8,850     & 3.0    & 3.0   & 0.05   & 0.41  & 1.0    & 0.0   & 319    & 30    \\
-Seed         & 24,592    & 3.0    & 4.0   & 0.17   & 0.88  & 1.0    & 1.0   & 329    & 36    \\
-Series A     & 7,966     & 4.0    & 5.0   & 4.00   & 7.71  & 2.0    & 1.0   & 341    & 40    \\
-Series       & 4,028     & 6.0    & 6.0   & 14.00  & 20.71 & 2.0    & 2.0   & 349    & 43    \\
-Series C     & 1,802     & 7.0    & 7.0   & 31.64  & 45.30 & 3.0    & 2.0   & 357    & 41    \\
-Series D+/PE & 2,179     & 8.0    & 7.0   & 45.50  & 93.59 & 3.0    & 4.0   & 353    & 50    \\ \midrule
-Total        & 325,722   & 1.0    & 5.0   & 0.0    & 0.0   & 0.0    & 0.0   & 278    & 37    \\
+Pre-Seed     & 113,915   & 4.36    & 3.74   & 0.00   & 0.00  & 0.0    & 0.0   & 33    & 127    \\
+Seed         & 38,942    & 4.66    & 4.00   & 0.25   & 1.30  & 1.0    & 1.0   & 185    & 127    \\
+Series A     & 6,615     & 5.69    & 5.01   & 4.40   & 7.91  & 2.0    & 1.0   & 246    & 117    \\
+Series B     & 3,342     & 7.61    & 5.92   & 14.89  & 22.03 & 2.0    & 2.0   & 261    & 87    \\
+Series C     & 1,610     & 8.70    & 5.52   & 35.29  & 45.88 & 3.0    & 2.0   & 311    & 80    \\
+Series D+    & 998       & 9.70    & 5.01   & 74.39  & 90.30 & 5.0    & 3.0   & 324    & 69    \\ \midrule
+Total        & 165,422   & 4.69    & 4.00   & 0.0    & 3.97   & 1.0    & 1.0   & 98    & 145    \\
 \bottomrule \end{tabular}
